--- a/laktory/resources/quickstart-stacks/unity-catalog/stack_pulumi.yaml
+++ b/laktory/resources/quickstart-stacks/unity-catalog/stack_pulumi.yaml
@@ -1,6 +1,7 @@
 name: unity-catalog
+organization: my_organization  # Will be used as Pulumi organization
 description: Lakehouse - Unity Catalog Configuration
-backend: terraform
+backend: pulumi
 
 # Account Provider
 # The account-level provider configuration varies by cloud provider.
@@ -12,6 +13,7 @@ pulumi:
     databricks:azure_tenant_id: ${vars.AZURE_TENANT_ID}
     databricks:azure_client_id: ${vars.AZURE_CLIENT_ID}
     databricks:azure_client_secret: ${vars.AZURE_CLIENT_SECRET}
+    databricks:auth_type: azure-client-secret
 
 
 # List of Resources to deploy
@@ -44,3 +46,6 @@ resources:
 
 variables:
   workspace_id_dev: 2211091707396001  # TODO: CUSTOMIZE WITH YOUR WORKSPACE ID
+
+environments:
+  global: {}
