--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -253,6 +253,7 @@ nav:
     - SQLParser: api/sqlparser.md
     - Narwhals Extension:
       - DataFrame:
+        - display: api/narwhals_ext/dataframe/display.md
         - groupby_and_agg: api/narwhals_ext/dataframe/groupby_and_agg.md
         - has_column: api/narwhals_ext/dataframe/has_column.md
         - schema_flat: api/narwhals_ext/dataframe/schema_flat.md
