--- a/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-dlt.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-dlt.yaml
@@ -54,10 +54,10 @@ nodes:
     nodes:
     - func_name: withColumns
       func_kwargs:
-        created_at: nw.col("data").field("created_at).cast(nw.dtypes.Timestamp())
+        created_at: nw.col("data").struct.field("created_at").cast(nw.dtypes.Datetime())
         symbol: nw.col("data").struct.field("symbol").cast(nw.dtypes.String())
-        open: nw.col("data").struct.field("open).cast(nw.dtypes.Float64())
-        close: nw.col("data").struct.field("close).cast(nw.dtypes.Float64())
+        open: nw.col("data").struct.field("open").cast(nw.dtypes.Float64())
+        close: nw.col("data").struct.field("close").cast(nw.dtypes.Float64())
     - func_name: drop_duplicates
       func_kwargs:
         subset: ["created_at", "symbol"]
