--- a/tests/data/stack.yaml
+++ b/tests/data/stack.yaml
@@ -38,7 +38,7 @@ resources:
             format: JSON
           dlt_template: null
           sinks:
-            - dlt_view_name: first_node
+            - pipeline_view_name: first_node
   databricks_jobs:
     job-stock-prices-ut-stack:
       name: job-stock-prices-ut-stack
