--- a/laktory/resources/quickstart-stacks/workflows/stack_pulumi.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/stack_pulumi.yaml
@@ -25,7 +25,7 @@ resources:
   # Laktory Sample Pipelines
   #   - Deployed resources depend on selected orchestrator
   #   - pl-stocks-job: Deployed as a Job with SQL transformations
-  #   - pl-stocks-dlt: Deployed as a Delta Live Tables with spark transformations
+  #   - pl-stocks-dlt: Deployed as a Lakeflow Declarative Pipeline with spark transformations
   pipelines:
     pl-stocks-job: !use resources/pl-stocks-job.yaml
     pl-stocks-dlt: !use resources/pl-stocks-dlt.yaml
