--- a/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-dlt.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-dlt.yaml
@@ -23,6 +23,9 @@ orchestrator:
 
 dependencies:
   - laktory==<laktory_version>
+  - ${vars.wheel_filepath}
+imports:
+  - lake
 
 # Define nodes (each node is a table or a view)
 nodes:
@@ -66,3 +69,6 @@ nodes:
       func_kwargs:
         subset: ["created_at", "symbol"]
       dataframe_api: NATIVE
+
+    # Custom function from lake package deployed as wheel file
+    - func_name: lake.with_last_modified
