--- a/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-job.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/resources/pl-stocks-job.yaml
@@ -20,6 +20,7 @@ orchestrator:
 
 dependencies:
   - laktory==<laktory_version>
+  - ${vars.wheel_filepath}
 
 # Define nodes (each node is a table or a view)
 nodes:
@@ -59,3 +60,6 @@ nodes:
       func_kwargs:
         subset: ["created_at", "symbol"]
       dataframe_api: NATIVE
+
+    # Custom function from lake package deployed as wheel file
+    - func_name: lake.with_last_modified
