--- a/laktory/resources/quickstart-stacks/workflows/resources/notebooks.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/resources/notebooks.yaml
@@ -1,6 +1,6 @@
 notebook-dlt-laktory-pl:
-  source: ./notebooks/dlt/dlt_laktory_pl.py
+  source: ./notebooks/dlt_laktory_pl.py
   dirpath: dlt/
 notebook-job-hello:
-  source: ./notebooks/jobs/job_hello.py
+  source: ./notebooks/job_hello.py
   dirpath: jobs/
