--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,7 +44,7 @@ dependencies = [
 [project.optional-dependencies]
 polars = [
     "deltalake",
-    "polars>=1.0",
+    "polars<1.32.1",  # issue with 1.32.1 .__version__ is invalid
     "sqlparse",
 ]
 pyspark = [
