--- a/laktory/resources/quickstart-stacks/workflows/stack_pulumi.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/stack_pulumi.yaml
@@ -12,6 +12,9 @@ pulumi:
 # List of Resources to deploy
 resources:
 
+  # DBFS Files: Stock prices data json file
+  databricks_dbfsfiles: !use resources/dbfsfiles.yaml
+
   # Python package (lake)
   databricks_pythonpackages: !use resources/pythonpackages.yaml
 
