--- a/laktory/resources/quickstart-stacks/workflows/stack_pulumi.yaml
+++ b/laktory/resources/quickstart-stacks/workflows/stack_pulumi.yaml
@@ -20,8 +20,8 @@ resources:
 
   # Notebooks for jobs and pipelines
   databricks_workspacetrees:
-    workspacetree-notebooks:
-      source: ./notebooks/
+    workspacetree-0:
+      source: ./workspacefiles/
 
   # Simple sample job
   databricks_jobs:
