--- a/tests/data/pl.yaml
+++ b/tests/data/pl.yaml
@@ -1,4 +1,5 @@
 name: pl-local
+databricks_quality_monitor_enabled: true
 dependencies:
   - requests>=2.0
   - ./wheels/lake-0.0.1-py3-none-any.whl
