--- a/tests/data/pl.yaml
+++ b/tests/data/pl.yaml
@@ -51,7 +51,7 @@ nodes:
     metadata:
       comment: "Gold"
       columns:
-        id:
+        - name: id
           comment: "Identification column"
 
 - name: gld_a
