--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,9 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+airflow = [
+    "apache-airflow",
+]
 polars = [
     "deltalake",
     "polars<1.32.1",  # issue with 1.32.1 .__version__ is invalid
