--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 .venv
 
 # Visual Studio
-.vscode/
+.vscode/*
 !.vscode/settings.json
 
 # PyCharm configuration
@@ -47,13 +47,23 @@ htmlcov
 Pulumi.yaml
 stack.tf.json
 tests/*terraform*
+tests/.terraform/
 tests/Pulumi.yaml
+tests/datasinks/metastore_db/*
+tests/datasinks/spark-warehouse/*
+tests/pipeline/node*
+tests/pipeline/spark-warehouse/*
+tests/pipeline/tmp/*
 tests/stack.tf.json
 tests/tmp*
-tests/.terraform/
 tmp-*
 
 # Test results
 junit
 
 
+# --------------------------------------------------------------------------- #
+# Scratchpad                                                                  #
+# --------------------------------------------------------------------------- #
+
+scratchpad/*
